<resources>
    <string name="app_name"><S>Book IT!</S></string>
    <string name="action_settings">Settings</string>
    <string name="app_main_label">Book IT!</string>
    <string name="btn_label_Add_">NEW BOOKING</string>
    <string name="btn_label_Show_Details">SHOW DETAILS</string>
    <string name="btn_label_Update_Details">UPDATE INFO</string>
    <string name="tv_Name">NAME</string>
    <string name="tv_cus_no">CUSTOMER COUNT</string>
    <string name="tv_Phone_Np">PHONE NO</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="updateForm_Title">UPDATE INFO</string>
    <string name="tv_Id">TABLE NO</string>
    <string name="tv_Update">UPDATE</string>
    <string name="btnDeleteText">DELETE DETAILS</string>
    <string name="deleteTitle">DELETE BOOKING</string>
    <string name="btnLabel_delete">DELETE</string>
    <string name="NoteDelete">Don\'t Leave the Field Empty</string>
    <string name="AddFormTitle">NEW BOOKING</string>
    <string name="appTitle">Book IT!</string>
    <integer name="fade_in_duration">5000</integer>
    <integer name="fade_in_from_left_duration">5000</integer>

</resources>
